--- a/assets/3458439583409583094580/3458439583409583094580.css
+++ b/assets/3458439583409583094580/3458439583409583094580.css
@@ -70,6 +70,19 @@ header nav .header_logo img {
     header nav .header_logo {
         margin-bottom: 20px;
     }
+
+    section.main .profile-box {
+        margin: 0 30px;
+    }
+
+    section.main .profile-box img {
+        width: 90px;
+        height: 90px;
+    }
+
+    section.main span {
+        font-size: 20px;
+    }
 }
 
 @media only screen and (max-width: 320px) {
